# jerry-statusline

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  GETTING_STARTED.md  MASTER-STATUS.md  README.md  SESSION-001-HANDOFF.md  SESSION-002-HANDOFF.md  SESSION-HANDOFF.md  WORKTRACKER.md  claude-settings-example.json  codecov.yml  config.json  config.yaml  pyproject.toml  statusline.py  test_statusline.py
.github/workflows/: pat-monitor.yml  release.yml  test.yml  version-bump.yml
docs/analysis/: SEC-001-e-005-validation.md  XPLAT-001-e-003-gap-analysis.md  XPLAT-001-e-007-gap-analysis-revised.md
docs/critiques/: SEC-001-e-004-adversarial-critique.md  XPLAT-001-e-006-adversarial-critique.md  XPLAT-001-e-009-final-validation.md
docs/qa/: XPLAT-001-e-005-qa-report.md
docs/requirements/: XPLAT-001-e-002-platform-requirements.md
docs/research/: SEC-001-e-001-security-scan.md  XPLAT-001-e-001-cross-platform-research.md
docs/reviews/: SEC-001-e-003-security-review.md
docs/risks/: XPLAT-001-e-008-risk-register.md
docs/synthesis/: XPLAT-001-e-010-synthesis-report.md
docs/verification/: XPLAT-001-e-004-vv-plan.md
orchestration/en005-20260211-001/: ORCHESTRATION.yaml  ORCHESTRATION_PLAN.md  ORCHESTRATION_WORKTRACKER.md
orchestration/en006-20260212-001/: ORCHESTRATION.yaml  ORCHESTRATION_PLAN.md  ORCHESTRATION_WORKTRACKER.md
orchestration/feat002-20260211-001/: ORCHESTRATION.yaml  ORCHESTRATION_PLAN.md  ORCHESTRATION_WORKTRACKER.md
scripts/: sync_versions.py
work/EPIC-001-cross-platform-compatibility/: EPIC-001-diagrams.md  (+6 more)
(+88 files in other folders)
